- Navbar brand changes per new design - Tree arrow icons alignment correction - Dashboard-Server activity table padding changes - Dialog shadow changes for better view

--- a/web/pgadmin/dashboard/static/scss/_dashboard.scss
+++ b/web/pgadmin/dashboard/static/scss/_dashboard.scss
@@ -36,6 +36,8 @@
 }
 
 .grid-container {
-    border-bottom-left-radius: $panel-border-radius;
-    border-bottom-right-radius: $panel-border-radius;
+    width: 100%;
+    overflow: auto;
+    border-radius: $card-border-radius;
+    border: $panel-border;
 }
