--- a/web/pgadmin/static/scss/_aci_tree.overrides.scss
+++ b/web/pgadmin/static/scss/_aci_tree.overrides.scss
@@ -68,9 +68,9 @@
 }
 .aciTree .aciTreeInode >.aciTreeLine .aciTreePush,
 .aciTree .aciTreeInode >.aciTreeLine .aciTreePush.aciTreeHover {
-  background-position: 10px 6px !important;
+  background-position: 6px 6px !important;
 }
 .aciTree .aciTreeOpen >.aciTreeLine .aciTreePush,
 .aciTree .aciTreeOpen >.aciTreeLine .aciTreePush.aciTreeHover {
-  background-position: -10px 5px !important;
+  background-position: -14px 5px !important;
 }
