--- a/web/pgadmin/static/scss/_bootstrap.overrides.scss
+++ b/web/pgadmin/static/scss/_bootstrap.overrides.scss
@@ -275,6 +275,14 @@ td.switch-cell > div.bootstrap-switch {
 
 .navbar-brand {
 	color: $color-brand !important;
+	background: $color-brand-bg !important;
+	margin-right: 0rem;
+	padding-left: 0.5rem !important;
+	padding-right: 1rem !important;
+	min-height: $title-height;
+	padding: 0rem;
+	display: flex;
+	align-items: center !important;
 }
 
 .navbar-brand:hover {
